--- a/config.yaml
+++ b/config.yaml
@@ -18,7 +18,7 @@ beef:
     # Used by both the RESTful API and the Admin interface
     credentials:
         user:   "beef"
-        passwd: "Pass123"
+        passwd: "MyS3cretP@ssW0d"
 
     # Interface / IP restrictions
     restrictions:
